2005/06/23	kaffeetisch

	* Gnome2.pm, Makefile.PL, META.yml, NEWS: Version 1.022.

2005/06/22	kaffeetisch

	* t/GnomeDateEdit.t: Use is() instead of is_deeply() to test flags
	values since the latter was changed to always use the string
	version of overloaded objects in recent versions of Test::More,
	whereas the former seems to work correctly.  Tested with
	Test::More 0.45 and 0.60.

2005/06/06	kaffeetisch

	* genmaps.pl, MANIFEST: Remove the old lad genmaps.pl since it's
	unused nowadays.

	* Gnome2.pm, META.yml, NEWS: Version 1.022.

2005/05/29	kaffeetisch

	* t/GnomeDateEdit.t: Remove the TODO around a test that previously
	failed due to the now resolved Test::More bug.

	* t/GnomeIconList.t: Skip all tests as GnomeIconList seems to be
	broken right now.

	* t/GnomeThumbnail.t: Skip tests if yes.xpm can't be found.

2005/03/06	kaffeetisch

	* Gnome2.pm, META.yml, NEWS, README: Version 1.021.

2005/03/06	kaffeetisch

	* t/GnomeDateEdit.t: Mark failing test as TODO till we have a
	solution for the Test::More issue.

2005/02/10 22:15 (+0100) kaffeetisch

	* Gnome2.pm: Do it like all the other cool kids and alter
	dl_load_flags() to avoid warnings on Darwin.

2004/10/24 11:55 (-0400) rwmcfa1

	* MANIFEST.SKIP: updates

	* perl-Gnome2.spec.in: new scheme that addresses x86_64 problems
	found by Carl Nygard

2004/09/14 00:08 (+0200) kaffeetisch

	* t/GnomeIconList.t, t/GnomePasswordDialog.t, t/GnomeProgram.t,
	xs/Gnome2.xs, xs/GnomeIconList.xs, xs/GnomePasswordDialog.xs,
	xs/GnomeProgram.xs: Make all version checks refer to stable
	releases.

	* Gnome2.pm, NEWS: Version 1.020.

2004/08/29 20:00 (+0200) kaffeetisch

	* Gnome2.pm, NEWS: Version 1.014.

2004/08/28 13:55 (+0200) kaffeetisch

	* t/GnomePasswordDialog.t, xs/Gnome2.xs: Bind and test the newly
	added gnome_authentication_manager_dialog_is_visible.

2004/08/23 21:05 (+0200) kaffeetisch

	* MANIFEST, Makefile.PL, podifyenums.pl: Patch from Kevin